[ModuleDatabase] Add some metrics related to the installed programs

These metrics will give us a sense of how expensive the GetProgramsData
operation is on our user's machine.

Bug: 754488
Change-Id: I85d12045fa0de33284f902c844766ece6205071e